# penguin-cafe-fcg-UFRGS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: cube.mtl  iglu_tentativa01.blend  iglu_tentativa01.blend1
data/comidas/cake/: carrot_cake_4k.mtl
data/comidas/croissant/: croissant_4k.mtl
data/decoracao/coffee-cart/: CoffeeCart_01_4k.mtl
data/decoracao/jug/: jug_01_4k.mtl
data/decoracao/power-box/: power_box_01_4k.mtl
data/decoracao/sofa/: Sofa_01_4k.mtl
data/decoracao/wet-floor-sign/: WetFloorSign_01_4k.mtl
data/moveis/cash-register/: CashRegister_01_4k.mtl
data/moveis/table/: wooden_table_02_4k.mtl
data/objects/: apple.mtl  barrel_part.mtl  bunny.mtl  carrot_cake.mtl  cash_register_only.mtl  cash_register_part.mtl  croissant.mtl  cube.mtl  jug.mtl  main_penguin.mtl  outside.mtl  penguin.mtl  sofa.mtl  sphere.mtl  table.mtl  wet_floor_sign.mtl
data/shaders/: shading.frag  shading.vert  uvmapping.frag
headers/globals/: structs.hpp  variables.hpp
headers/wrong/: matrices.h
lib/imp/: glad.c  matrices.cpp
lib/include/: stb_image.h
lib/include/glm/: CMakeLists.txt
shaders/: generic.frag  uvmapping.frag
src/: main.cpp
src/globals/: structs.cpp  variables.cpp
src/headers/: game.hpp  global.hpp  loading.hpp  physics.hpp  player.hpp  rendering.hpp
src/headers/game/: loop.hpp
src/headers/global/: struct.hpp  variable.hpp
src/headers/loading/: model.hpp  object.hpp  shader.hpp
src/headers/physics/: collisions.hpp
src/headers/player/: character.hpp  input.hpp  movement.hpp
src/headers/rendering/: camera.hpp  game.hpp  object.hpp  scene.hpp  shader.hpp  struct.hpp  text.hpp  window.hpp
src/imp/game/: loop.cpp
src/imp/global/: struct.cpp  variable.cpp
src/imp/loading/: model.cpp  object.cpp  shader.cpp
src/imp/physics/: collisions.cpp
src/imp/player/: character.cpp  input.cpp  movement.cpp
src/imp/rendering/: camera.cpp  game.cpp  object.cpp  scene.cpp  shader.cpp  struct.cpp  text.cpp  window.cpp
src/rendering/: text.cpp
src/wrong/: matrices.cpp
